<resources>
    <string name="app_name">ToDoList</string>
    <string name="important">Important</string>
    <string name="created_at">Created at :</string>
    <string name="enter_your_task">Enter Your Task</string>
    <string name="search">Search</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="sort_by_creation_date">Sort by creation date</string>
    <string name="hide_completed">Hide Completed</string>
    <string name="delete_completed">Delete Completed</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>