<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/action_serach"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom|collapseActionView"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>
    <item
        android:title="Sort"
        android:icon="@drawable/ic_sort"
        app:showAsAction="always"
        >

        <menu>
            <item
                android:id="@+id/action_sort_by_name"
                android:title="@string/sort_by_name"
                app:showAsAction="never"/>

            <item
                android:id="@+id/action_sort_by_creation_date"
                android:title="@string/sort_by_creation_date"
                app:showAsAction="never"/>
        </menu>

    </item>


    <item
        android:id="@+id/action_hide_completed_task"
        android:title="@string/hide_completed"
        android:checkable="true"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_delete_completed"
        android:title="@string/delete_completed"
        app:showAsAction="never"/>


</menu>